# x5-store-mint22-3-backup-20260315-192549

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  x5_storage.db
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/api/routes/: arm_admin.py  documents.py  journal.py  local_llm.py  (+2 more)
app/core/: config.py
app/db/: init_db.py  session.py
app/integrations/: telegram_client.py
app/models/: __init__.py  document.py  document_content.py  journal_entry.py  telegram_rule.py  work_schedule.py
app/schemas/: __init__.py  arm_admin.py  document.py  journal_entry.py  local_llm.py  telegram.py  work_schedule.py
app/services/: local_llm.py  office_export.py  scan_archiver.py  scan_classifier.py  telegram_automation.py
docs/: TODO_real_assistant.md
docs/chat_history/: chat_history_2026-03-15_backup.md
docs/document_control/: README.md  arm_admin_panel_concept.md  folder_structure.md  form2_plus_gap_assessment.md  operator_manual.md  scanner_setup_pantum_bm2300w.md  standard_registers.md
docs/migration/: linux_mint_22_3_migration.md
docs/templates/: INDEX.md  README.md
scripts/: bootstrap_object_docs.py  build_and_open_print_pack.ps1  check_gdrive.py  convert_iot_to_docx.py  export_orders_pdf.py  run_api_clean.ps1  run_api_clean.sh  scan_archive_docs.py  scanner_control.py  seed_db_from_filesystem.py  setup_linux_mint_22_3.sh  setup_pantum_bm2300w.ps1  start_stack_autostart.ps1
tests/: test_arm_admin.py  test_health.py  test_local_llm.py  test_scan_archiver.py  test_scan_classifier.py  test_telegram_processing.py
(+277 files in other folders)
