[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x5-storage"
version = "0.1.0"
description = "Construction-site documentation backend with Telegram automation hooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "telethon>=1.36.0,<2.0.0",
  "pytesseract>=0.3.10,<1.0.0",
  "pillow>=10.3.0,<11.0.0",
  "pypdfium2>=4.30.0,<5.0.0",
  "pywin32>=306"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
